@@ -1,3 +1,7 @@
+2012-02-11 Felix Natter <fnatter@gmx.net>
+	* infoview.c: reduce flicker by clearing lines incrementally on a
+	  scrolling event
+
 2012-02-10 Felix Natter <fnatter@gmx.net>
 	* banner.c/h: put banner() in its own file so that it can be used
 	  in infoview.c
